--- a/style.css
+++ b/style.css
@@ -16,18 +16,36 @@ body {
 }
 
 .site-header-options {
+    align-items: center;
+    display: flex;
     grid-column: 3 / 4;
     grid-row: 2 / 3;
+    justify-content: space-around;
+}
+
+.site-header-nav {
+    align-items: center;
+    display: flex;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    justify-content: end;
 }
 
 .site-header-search {
+    align-items: center;
+    display: flex;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
+    justify-content: center;
 }
 
 .site-header-user {
+    align-items: start;
+    display: flex;
+    flex-direction: column-reverse;
     grid-column: 1 / 3;
     grid-row: 2 / 3 ;
+    justify-content: center;
 }
 
 .site-main {
