--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 .site-main {
     background-color: gray;
     display: grid;
-    grid-template: 1fr 1fr 4fr / 2fr 1fr;
+    grid-template: 1fr 4fr / 2fr 1fr;
 }
 
 .site-main-announcements-item, 
@@ -61,9 +61,10 @@ body {
 }
 
 .site-main-announcements {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 1 / 3;
 }
 
 .site-main-announcements-header {
