--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 .site-main {
     background-color: gray;
     display: grid;
+    gap: 2rem;
     grid-template: 1fr 4fr / 2fr 1fr;
 }
 
@@ -78,11 +79,6 @@ body {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
-}
-
-.site-main-projects-header {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
 }
 
 .site-main-projects-item {
