--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     background-color: gray;
     display: grid;
     gap: 2rem;
-    grid-template: 4fr / 2fr 1fr;
+    grid-template: 1fr 1fr / 2fr 1fr;
     padding-bottom: 4rem;
     padding-left: 2rem;
 }
@@ -73,12 +73,16 @@ body {
     display: flex;
     flex-direction: column;
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.site-main-projects {
+    grid-row: 1 / 3;
 }
 
 .site-main-projects-content {
     display: grid;
     gap: 2rem;
-    grid-column: 1 / 2;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
 }
 
@@ -90,6 +94,7 @@ body {
     display: flex;
     flex-direction: column;
     grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .site-sidebar {
