started styling font and anchors

--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 * {
     /* border: solid 2px red; */
+    font-family: "Roboto";
 }
 
 a {
     text-decoration: none;
 }
 
+a:visited {
+    color: black;
+}
+
 body {
-    border-left: solid 16rem black;
-    border-right: solid 16rem black;
     display: grid;
     grid-template: 1fr 4fr / 1fr 4fr;
     margin: 0rem;
