--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@ a {
     text-decoration: none;
 }
 
-a:visited {
-    color: black;
-}
-
 body {
     display: grid;
     grid-template: 1fr 4fr / 1fr 4fr;
@@ -126,6 +122,12 @@ p {
     background-color: aqua;
     display: flex;
     flex-direction: column;
+    color: white;
     grid-column-start: 1;
     grid-row: 1 / 3;
+}
+
+.site-sidebar-nav-list-item-a,
+.site-sidebar-options-list-item-a {
+    color: white;
 }
