--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ body {
 }
 
 h3 {
+    color: black;
     margin: 0rem;
 }
 
 p {
+    color: #636363;
     margin: 0rem;
 }
 
@@ -28,7 +30,15 @@ p {
     grid-template: 1fr 1fr / 1fr 1fr 1fr;
 }
 
-.site-header-options {
+.site-header-nav {
+    align-items: center;
+    display: flex;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    justify-content: end;
+}
+
+.site-header-options-list {
     align-items: center;
     display: flex;
     grid-column: 3 / 4;
@@ -38,19 +48,12 @@ p {
     padding-left: 0rem;
 }
 
-.site-header-options-item {
-    background-color: aqua;
+.site-header-options-item-a {
+    background-color: #1992d4;
     border-radius: 2rem;
+    color: white;
     list-style: none;
     padding: 1rem 2.5rem 1rem 2.5rem;
-}
-
-.site-header-nav {
-    align-items: center;
-    display: flex;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-    justify-content: end;
 }
 
 .site-header-search {
@@ -71,7 +74,7 @@ p {
 }
 
 .site-main {
-    background-color: gray;
+    background-color: #e2e8f0;
     display: grid;
     gap: 2rem;
     grid-template: 1fr 1fr / 2.5fr 1fr;
@@ -108,6 +111,7 @@ p {
 }
 
 .site-main-projects-item {
+    border-left: 2px solid #f0b429;
     padding: 1rem;
 }
 
@@ -119,7 +123,7 @@ p {
 }
 
 .site-sidebar {
-    background-color: aqua;
+    background-color: #1992d4;
     display: flex;
     flex-direction: column;
     color: white;
