--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ p {
     background-color: #1992d4;
     border-radius: 2rem;
     color: white;
+    font-weight: 700;
     list-style: none;
     margin: 0rem 1rem 0rem 1rem;
-    padding: 1rem 2.5rem 1rem 2.5rem;
-    width: 8.125rem;
+    padding: .75rem 2rem .75rem 2rem;
 }
 
 .site-header-search {
@@ -93,7 +93,7 @@ p {
 .site-main-projects-item,
 .site-main-trending-content {
     background-color: white;
-    border-radius: 2rem;
+    border-radius: .5rem;
 }
 
 .site-main-announcements {
@@ -114,7 +114,7 @@ p {
 }
 
 .site-main-projects-item {
-    border-left: 2px solid #f0b429;
+    border-left: .5rem solid #f0b429;
     padding: 1rem;
 }
 
@@ -127,14 +127,21 @@ p {
 
 .site-sidebar {
     background-color: #1992d4;
+    color: white;
     display: flex;
     flex-direction: column;
-    color: white;
     grid-column-start: 1;
     grid-row: 1 / 3;
+}
+
+.site-sidebar-nav-list,
+.site-sidebar-options-list {
+    list-style: none;   
 }
 
 .site-sidebar-nav-list-item-a,
 .site-sidebar-options-list-item-a {
     color: white;
+    font-size: 1.5rem;
+    font-weight: 500; 
 }
