--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     /* border: solid 2px red; */
+    box-sizing: border-box;
     font-family: "Roboto";
 }
 
@@ -23,12 +24,20 @@ p {
     margin: 0rem;
 }
 
+:root {
+    --dark-gray: #636363;
+    --dark-yellow: #f0b429;
+    --light-blue: #1992d4;
+    --light-gray: #e2e8f0;
+}
+
 .site-header {
-    box-shadow: 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
     display: grid;
     grid-column-start: 2;
     grid-row-start: 1;
     grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    z-index: 10;
 }
 
 .site-header-nav {
@@ -42,21 +51,29 @@ p {
 .site-header-options-list {
     align-items: center;
     display: flex;
+    gap: 2rem;
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    justify-content: space-around;
+    justify-content: flex-end;
     list-style: none;
     padding-left: 0rem;
+}
+
+.site-header-options-list-item {
+    text-align: center;
+    max-width: 7rem;
+    width: 100%;
 }
 
 .site-header-options-item-a {
     background-color: #1992d4;
     border-radius: 2rem;
     color: white;
+    display: block;
     font-weight: 700;
     list-style: none;
-    margin: 0rem 1rem 0rem 1rem;
     padding: .75rem 2rem .75rem 2rem;
+    width: 100%;
 }
 
 .site-header-search {
@@ -65,6 +82,20 @@ p {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     justify-content: center;
+}
+
+.site-header-search-bar {
+    border: none;
+    background-color: #e2e8f0;
+}
+
+.site-header-search-button {
+    border: none;
+    background-color: transparent;
+}
+
+.site-header-search-button:hover {
+    cursor: pointer;
 }
 
 .site-header-user {
@@ -104,11 +135,14 @@ p {
 }
 
 .site-main-projects {
+    display: flex;
+    flex-direction: column;
     grid-row: 1 / 3;
 }
 
 .site-main-projects-content {
     display: grid;
+    flex: 1;
     gap: 2rem;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
 }
@@ -116,7 +150,7 @@ p {
 .site-main-projects-item {
     border-left: .5rem solid #f0b429;
     padding: 1rem;
-}
+}   
 
 .site-main-trending-content {
     display: flex;
