--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h3 {
 }
 
 p {
-    color: #636363;
+    color: var(--dark-gray);
     margin: 0rem;
 }
 
@@ -66,7 +66,7 @@ p {
 }
 
 .site-header-options-item-a {
-    background-color: #1992d4;
+    background-color: var(--light-blue);
     border-radius: 2rem;
     color: white;
     display: block;
@@ -86,7 +86,7 @@ p {
 
 .site-header-search-bar {
     border: none;
-    background-color: #e2e8f0;
+    background-color: var(--light-gray);
 }
 
 .site-header-search-button {
@@ -108,7 +108,7 @@ p {
 }
 
 .site-main {
-    background-color: #e2e8f0;
+    background-color: var(--light-gray);
     display: grid;
     gap: 2rem;
     grid-template: 1fr 1fr / 2.5fr 1fr;
@@ -148,7 +148,7 @@ p {
 }
 
 .site-main-projects-item {
-    border-left: .5rem solid #f0b429;
+    border-left: .5rem solid var(--dark-yellow);
     padding: 1rem;
 }   
 
@@ -160,7 +160,7 @@ p {
 }
 
 .site-sidebar {
-    background-color: #1992d4;
+    background-color: var(--light-blue);
     color: white;
     display: flex;
     flex-direction: column;
