styled trending section

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
     grid-row: 2 / 3;
     justify-content: flex-end;
     list-style: none;
-    padding-left: 0rem;
+    padding: 0rem 4rem 0rem 0rem;
 }
 
 .site-header-options-list-item {
@@ -112,7 +112,7 @@ p {
     display: grid;
     gap: 2rem;
     grid-template: 1fr 1fr / 2.5fr 1fr;
-    padding-left: 2rem;
+    padding:0rem 0rem 2rem 2rem;
 }
 
 .site-main-announcements,
@@ -125,6 +125,7 @@ p {
 .site-main-trending-content {
     background-color: white;
     border-radius: .5rem;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 
 .site-main-announcements {
@@ -152,11 +153,24 @@ p {
     padding: 1rem;
 }   
 
+.site-main-trending {
+    display: flex;
+    flex-direction: column;
+}
+
 .site-main-trending-content {
     display: flex;
     flex-direction: column;
+    flex: 1;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    justify-content: space-evenly;
+}
+
+.site-main-trending-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .site-sidebar {
