--- a/style.css
+++ b/style.css
@@ -85,16 +85,20 @@ p {
 }
 
 .site-header-search-bar {
-    border: none;
     background-color: var(--light-gray);
+    border-radius: 2rem;
+    border: none;
+    height: 2rem;
 }
 
-.site-header-search-button {
+.site-header-search-button,
+.site-main-projects-item-button {
     border: none;
     background-color: transparent;
 }
 
-.site-header-search-button:hover {
+.site-header-search-button:hover,
+.site-main-projects-item-button:hover {
     cursor: pointer;
 }
 
@@ -149,8 +153,10 @@ p {
 }
 
 .site-main-projects-item {
+    display: flex;
+    flex-direction: column;
     border-left: .5rem solid var(--dark-yellow);
-    padding: 1rem;
+    padding: 2rem 1rem;
 }   
 
 .site-main-trending {
