--- a/style.css
+++ b/style.css
@@ -42,8 +42,13 @@ p {
     --light-gray: #e2e8f0;
 }
 
+.sidebar-header-svg {
+    fill: white;
+}
+
 .sidebar-svg {
     fill: white;
+    margin: 0rem 1.3rem 0rem 0rem;
 }
 
 .site-header {
@@ -223,13 +228,18 @@ p {
 .site-sidebar-header {
     display: flex;
     align-items: center;
-    margin: 0rem 0rem 0rem 1rem;
-    gap: .75rem;
+    margin: 0rem 0rem 0rem 1.5rem;
+    gap: 1rem;
 }
 
 .site-sidebar-nav-list,
 .site-sidebar-options-list {
-    list-style: none;   
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
+    margin: 2rem 0rem 3rem 0rem;
+    padding: 0rem 0rem 0rem 2.2rem;   
 }
 
 .site-sidebar-nav-list-item-a,
