--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h4 {
     margin: 0rem;
 }
 
+img {
+    height: 5rem;
+}
+
 p {
     color: var(--dark-gray);
     margin: 0rem;
@@ -66,6 +70,11 @@ p {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
     justify-content: end;
+}
+
+.site-header-nav-user {
+    align-items: center;
+    display: flex;
 }
 
 .site-header-options-list {
@@ -140,6 +149,12 @@ p {
     justify-content: center;
 }
 
+.site-header-user-handle {
+    color: black;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
 .site-main {
     background-color: var(--light-gray);
     display: grid;
@@ -211,9 +226,8 @@ p {
 }
 
 .site-main-trending-item {
+    align-items: center;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .site-sidebar {
@@ -227,10 +241,10 @@ p {
 }
 
 .site-sidebar-header {
-    display: flex;
     align-items: center;
-    margin: 0rem 0rem 0rem 1.5rem;
+    display: flex;
     gap: 1rem;
+    margin: 0rem 0rem 0rem 1.5rem;
 }
 
 .site-sidebar-nav-list,
