--- a/style.css
+++ b/style.css
@@ -8,10 +8,17 @@ a {
     text-decoration: none;
 }
 
+article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 body {
-    display: grid;
-    grid-template: 1fr 4fr / 1fr 4fr;
-    margin: 0rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    height: 100vh;
 }
 
 h2 {
@@ -32,6 +39,12 @@ h4 {
 
 img {
     height: 5rem;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    flex: 1;
 }
 
 p {
@@ -57,18 +70,27 @@ p {
 
 .site-header {
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    display: grid;
-    grid-column-start: 2;
-    grid-row-start: 1;
-    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 0rem 3rem;
     z-index: 10;
+}
+
+.site-header-area-bottom {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;    
+}
+
+.site-header-area-top {
+    align-items: center;
+    display: flex;
+    gap: 15rem;
 }
 
 .site-header-nav {
     align-items: center;
     display: flex;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
     justify-content: end;
 }
 
@@ -78,14 +100,10 @@ p {
 }
 
 .site-header-options-list {
-    align-items: center;
-    display: flex;
+    display: grid;
     gap: 2rem;
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    justify-content: flex-end;
+    grid-template-columns: 1fr 1fr 1fr;
     list-style: none;
-    padding: 0rem 4rem 0rem 0rem;
 }
 
 .site-header-options-list-item {
@@ -108,8 +126,7 @@ p {
 .site-header-search {
     align-items: center;
     display: flex;
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
+    flex: 1;
     justify-content: center;
 }
 
@@ -118,7 +135,6 @@ p {
     border-radius: 2rem;
     border: none;
     height: 2rem;
-    margin: 0rem 1rem;
     width: 100%;
 }
 
@@ -135,17 +151,20 @@ p {
 
 .site-header-search-form {
     display: flex;
+    gap: 1rem;
     place-content: center center;
-    margin: 0rem 3rem;
     width: 100%;
 }
 
+.site-header-small-text {
+    display: block;
+    font-size: 1.125rem;
+}
+
 .site-header-user {
-    align-items: start;
+    align-items: center;
     display: flex;
-    flex-direction: column-reverse;
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
+    flex-direction: row-reverse;
     justify-content: center;
 }
 
@@ -159,7 +178,7 @@ p {
     background-color: var(--light-gray);
     display: grid;
     gap: 2rem;
-    grid-template: 1fr 1fr / 2.5fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     padding:0rem 0rem 2rem 2rem;
 }
 
@@ -186,14 +205,13 @@ p {
 .site-main-projects {
     display: flex;
     flex-direction: column;
-    grid-row: 1 / 3;
 }
 
 .site-main-projects-content {
     display: grid;
     flex: 1;
     gap: 2rem;
-    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 .site-main-projects-item {
@@ -262,4 +280,12 @@ p {
     color: white;
     font-size: 1.5rem;
     font-weight: 500; 
+}
+
+
+.user-image-large {
+    background-color: var(--dark-yellow);
+    border-radius: 90%;
+    height: 6rem;
+    padding: .5rem;
 }
